k8s/network/xf-test-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xf-test
